# ihp-boilerplate

./: .envrc  .ghci  .gitignore  .hie-bios  App.cabal  CLAUDE.md  Layout.hs.patch  Main.hs  Makefile  README.md  Welcome.hs.patch  build-env  cabal.project  default.nix  devenv.nix  devenv.yaml  elm.json  flake.nix  hie.yaml  package-lock.json  package.json  spago.dhall  start  start.sh  watch-frontend
.github/workflows/: nix-flake-check.yml  notify.sh  test.yml
Application/: Schema.hs  Validation.hs
Application/Helper/: Controller.hs  View.hs
Application/Script/: Prelude.hs
Application/Task/: Prelude.hs
Config/: Config.hs
Config/nix/: nixpkgs-config.nix
Config/nix/hosts/production/: configuration.nix  hardware-configuration.nix  host.nix
Test/: Integration.hs  Main.hs
Web/: App.hs  FrontController.hs  Routes.hs  Types.hs
Web/Controller/: Context.hs  Prelude.hs
Web/View/: Context.hs  Layout.hs  Prelude.hs
elm/: Main.elm  index.js
halogen/: Main.purs
miso/: App.hs  Frontend.cabal  Main.hs  index.js
src/: Main.hs
src/Model/: Schema.hs
static/: app.js
static/halogen/: index.js  index.js.map  main.js
